<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/avatar_image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/avatar_description"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/author_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar_image"
        app:layout_constraintTop_toTopOf="@id/avatar_image"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:text="Author name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/Widget.AppTheme.MenuCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="false"
        android:src="@drawable/ic_menu_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/author_name"
        tools:ignore="MissingConstraints" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@id/avatar_image"
        app:layout_constraintEnd_toEndOf="@id/author_name"
        app:layout_constraintStart_toEndOf="@id/avatar_image"
        app:layout_constraintTop_toBottomOf="@id/author_name"
        tools:text="09.08.2022" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="author_name,avatar_image,published" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/postText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/video_frame_in_post"
        tools:text="@string/Content" />

    <androidx.constraintlayout.widget.Group
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:background="@android:color/background_light"
        android:visibility="visible"
        app:constraint_referenced_ids="video_frame_in_post" />


    <ImageView
        android:id="@+id/video_frame_in_post"
        android:layout_width="300dp"
        android:layout_height="122dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/video_image"
        android:foregroundGravity="center"
        android:src="@mipmap/ic_video_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar_image"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="39dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/lowerBarrier"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:barrierDirection="top"
        app:layout_constraintTop_toBottomOf="@id/video_frame_in_post"
        app:constraint_referenced_ids="likes, share, viewsIcon" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likes"
        style="@style/Widget.AppTheme.LikeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postText"
        tools:text="1000" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        style="@style/Widget.AppTheme.ShareCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="false"
        app:layout_constraintStart_toEndOf="@id/likes"
        app:layout_constraintTop_toBottomOf="@id/postText"
        tools:text="100" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/viewsIcon"
        style="@style/Widget.AppTheme.ViewCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="false"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textColor="@color/material_on_background_emphasis_high_type"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/space"
        app:layout_constraintTop_toBottomOf="@id/postText" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/space"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@id/likes"
        app:layout_constraintEnd_toStartOf="@id/viewsIcon"
        app:layout_constraintStart_toEndOf="@id/share"
        app:layout_constraintTop_toTopOf="@id/likes" />



    <androidx.constraintlayout.widget.Barrier
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="viewsIcon" />

</androidx.constraintlayout.widget.ConstraintLayout>